fix spacing of alumni tiles to match team members grid width more

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1429,7 +1429,7 @@ ul#instagram-content-active {
 
 #portfolio-alumni .block .portfolio-content ul li {
   display: inline-block;
-  width: 18%;
+  width: 18.5%;
   overflow: hidden;
   margin: 0.5% 0.5%;
   position: relative;
